fix spacing'

--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@ body {
 .projectsSection{
     background-color: whitesmoke;
     color: #4F5C4B;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     font-size: 14px;
-    padding-right: 10%;
+    padding-right: 5%;
 }
 
 a {
